[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/GameResults.gd" type="Script" id=1]

[node name="GameResults" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.054902, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_left = 537.0
margin_right = 620.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Main Menu"

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 620.0
margin_bottom = 38.0
text = "Game Results:"

[node name="GameResults" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 620.0
margin_bottom = 100.0
size_flags_vertical = 7
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 620.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="CorrectQuestionsContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 305.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CorrectQuestions" type="Label" parent="VBoxContainer/HBoxContainer/CorrectQuestionsContainer"]
margin_bottom = 14.0

[node name="WrongQuestionsContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 315.0
margin_right = 620.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WrongQuestions" type="Label" parent="VBoxContainer/HBoxContainer/WrongQuestionsContainer"]
margin_bottom = 14.0
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
